--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "node-cache": "^5.1.2",
     "vercel": "^34.2.4"
   },
